// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Create/New" commands create new app 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 177,
            type: file
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                },
                {
                    name: setup.js,
                    size: 370,
                    type: file
                }
            ],
            size: 707,
            type: directory
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 1207,
                            type: file
                        }
                    ],
                    size: 1207,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot,
                            size: 53094,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.svg,
                            size: 167134,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.ttf,
                            size: 52788,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff,
                            size: 25732,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff2,
                            size: 18112,
                            type: file
                        }
                    ],
                    size: 316860,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: blank_canvas.png,
                            size: 88698,
                            type: file
                        },
                        {
                            name: preferences.png,
                            size: 81379,
                            type: file
                        }
                    ],
                    size: 170077,
                    type: directory
                },
                {
                    name: index.html,
                    size: 1131,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 489275,
            type: directory
        },
        {
            name: babel.config.js,
            size: 322,
            type: file
        },
        {
            name: package.json,
            size: 1732,
            type: file
        },
        {
            name: postcss.config.js,
            size: 438,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: app.js,
                            size: 1308,
                            type: file
                        }
                    ],
                    size: 1308,
                    type: directory
                },
                {
                    name: main.js,
                    size: 199,
                    type: file
                },
                {
                    name: plugins,
                    children: [
                        {
                            name: mn.radio.logging.js,
                            size: 3980,
                            type: file
                        },
                        {
                            name: mn.redux.state.js,
                            size: 2039,
                            type: file
                        }
                    ],
                    size: 6019,
                    type: directory
                },
                {
                    name: shims,
                    children: [
                        {
                            name: mn.renderer.shim.js,
                            size: 510,
                            type: file
                        }
                    ],
                    size: 510,
                    type: directory
                }
            ],
            size: 8036,
            type: directory
        },
        {
            name: webpack.config.js,
            size: 1041,
            type: file
        }
    ],
    size: 501764,
    type: directory
}
"
`;

exports[`"Create/New" commands create new app 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"watch 'npm run build:es' src\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\",
        \\"prestart\\": \\"npm run build:es\\",
        \\"start\\": \\"npm-run-all --parallel watch:es watch:css serve\\",
        \\"serve\\": \\"browser-sync start --server ./dist --files ./dist\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"src/main.js\\"
}
"
`;

exports[`"Create/New" commands create new app 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade'
    ],
    parser: 'babel-eslint'
};"
`;

exports[`"Create/New" commands create new project 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 154,
            type: file
        },
        {
            name: babel.config.js,
            size: 322,
            type: file
        },
        {
            name: package.json,
            size: 482,
            type: file
        },
        {
            name: src,
            children: [],
            size: 0,
            type: directory
        }
    ],
    size: 994,
    type: directory
}
"
`;

exports[`"Create/New" commands create new react app 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 455,
            type: file
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 337,
                    type: file
                },
                {
                    name: setup.js,
                    size: 370,
                    type: file
                }
            ],
            size: 707,
            type: directory
        },
        {
            name: assets,
            children: [
                {
                    name: css,
                    children: [
                        {
                            name: style.css,
                            size: 1207,
                            type: file
                        }
                    ],
                    size: 1207,
                    type: directory
                },
                {
                    name: fonts,
                    children: [
                        {
                            name: SansForgetica-Regular.eot,
                            size: 53094,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.svg,
                            size: 167134,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.ttf,
                            size: 52788,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff,
                            size: 25732,
                            type: file
                        },
                        {
                            name: SansForgetica-Regular.woff2,
                            size: 18112,
                            type: file
                        }
                    ],
                    size: 316860,
                    type: directory
                },
                {
                    name: images,
                    children: [
                        {
                            name: preferences.png,
                            size: 81379,
                            type: file
                        },
                        {
                            name: react.png,
                            size: 128344,
                            type: file
                        }
                    ],
                    size: 209723,
                    type: directory
                },
                {
                    name: index.html,
                    size: 1166,
                    type: file
                },
                {
                    name: library,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                },
                {
                    name: workers,
                    children: [
                        {
                            name: .gitkeep,
                            size: 0,
                            type: file
                        }
                    ],
                    size: 0,
                    type: directory
                }
            ],
            size: 528956,
            type: directory
        },
        {
            name: babel.config.js,
            size: 387,
            type: file
        },
        {
            name: package.json,
            size: 1636,
            type: file
        },
        {
            name: postcss.config.js,
            size: 438,
            type: file
        },
        {
            name: src,
            children: [
                {
                    name: components,
                    children: [
                        {
                            name: App.js,
                            size: 621,
                            type: file
                        },
                        {
                            name: Message.js,
                            size: 199,
                            type: file
                        }
                    ],
                    size: 820,
                    type: directory
                },
                {
                    name: main.js,
                    size: 361,
                    type: file
                }
            ],
            size: 1181,
            type: directory
        },
        {
            name: webpack.config.js,
            size: 1155,
            type: file
        }
    ],
    size: 534951,
    type: directory
}
"
`;

exports[`"Create/New" commands create new react app 2`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"build:es\\": \\"webpack\\",
        \\"watch:es\\": \\"webpack-dev-server --hot --open --mode development\\",
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' src\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"build:css\\": \\"postcss ./assets/css/style.css --dir ./dist\\",
        \\"watch:css\\": \\"npm run build:css -- --watch\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"copy\\": \\"npm-run-all --parallel copy:assets copy:index\\",
        \\"copy:assets\\": \\"cpy './assets/!(css)/**/*.*' './assets/**/[.]*' ./dist --parents --recursive\\",
        \\"copy:index\\": \\"cpy './assets/index.html' ./dist\\",
        \\"watch:assets\\": \\"watch 'npm run copy' ./assets\\",
        \\"prebuild:es\\": \\"del-cli dist/assets\\",
        \\"postbuild:es\\": \\"npm run copy\\",
        \\"dashboard\\": \\"webpack-dashboard -- webpack-dev-server --config ./webpack.config.js\\",
        \\"dev\\": \\"stmux [ \\\\\\"npm run dashboard\\\\\\" : \\\\\\"npm run lint:ing\\\\\\" ]\\",
        \\"start\\": \\"npm-run-all build:es --parallel watch:*\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"setupFilesAfterEnv\\": [
            \\"<rootDir>/__tests__/setup.js\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"src/main.js\\"
}
"
`;

exports[`"Create/New" commands create new react app 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;

exports[`"Create/New" commands create new server 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: .env,
            size: 0,
            type: file
        },
        {
            name: .eslintignore,
            size: 36,
            type: file
        },
        {
            name: .eslintrc.js,
            size: 476,
            type: file
        },
        {
            name: .gitignore,
            size: 18,
            type: file
        },
        {
            name: __tests__,
            children: [
                {
                    name: example.test.js,
                    size: 698,
                    type: file
                }
            ],
            size: 698,
            type: directory
        },
        {
            name: config,
            children: [
                {
                    name: default.js,
                    size: 857,
                    type: file
                },
                {
                    name: test.js,
                    size: 857,
                    type: file
                }
            ],
            size: 1714,
            type: directory
        },
        {
            name: favicon.ico,
            size: 0,
            type: file
        },
        {
            name: graphql.js,
            size: 1630,
            type: file
        },
        {
            name: index.js,
            size: 1434,
            type: file
        },
        {
            name: package.json,
            size: 992,
            type: file
        },
        {
            name: public,
            children: [
                {
                    name: example.md,
                    size: 263,
                    type: file
                },
                {
                    name: index.html,
                    size: 191,
                    type: file
                }
            ],
            size: 454,
            type: directory
        },
        {
            name: server.js,
            size: 2770,
            type: file
        },
        {
            name: socket.js,
            size: 624,
            type: file
        },
        {
            name: ssl,
            children: [
                {
                    name: server.cert,
                    size: 1241,
                    type: file
                },
                {
                    name: server.key,
                    size: 1704,
                    type: file
                }
            ],
            size: 2945,
            type: directory
        }
    ],
    size: 13791,
    type: directory
}
"
`;

exports[`"Create/New" commands create new server 2`] = `
"{
    \\"name\\": \\"tomo-server\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"Node.js HTTP(S), WebSocket, and GraphQL servers with an 80% solution for security 'baked in'\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": [],
    \\"scripts\\": {
        \\"lint\\": \\"eslint . -c ./.eslintrc.js --fix\\",
        \\"lint:ing\\": \\"watch 'npm run lint' .\\",
        \\"lint:tests\\": \\"eslint __tests__/**/*.js -c ./.eslintrc.js --fix --no-ignore\\",
        \\"test\\": \\"jest .*.test.js --coverage\\",
        \\"test:ing\\": \\"npm test -- --watchAll\\",
        \\"predev\\": \\"npm run open\\",
        \\"dev\\": \\"stmux [ \\\\\\"nodemon index.js\\\\\\" : \\\\\\"npm run lint:watch\\\\\\" ]\\",
        \\"prestart\\": \\"npm audit\\",
        \\"start\\": \\"node index.js\\",
        \\"open\\": \\"open-cli http://localhost:8111\\"
    },
    \\"jest\\": {
        \\"testMatch\\": [
            \\"**/__tests__/**/*.(e2e|test).[jt]s?(x)\\"
        ],
        \\"watchPlugins\\": [
            \\"jest-watch-typeahead/filename\\",
            \\"jest-watch-typeahead/testname\\"
        ]
    },
    \\"main\\": \\"index.js\\"
}
"
`;

exports[`"Create/New" commands create new server 3`] = `
"module.exports = {
    env: {
        es6: true,
        jest: true,
        browser: false,
        node: true
    },
    extends: [
        'omaha-prime-grade',
        'plugin:react/recommended',
        'plugin:jsx-a11y/recommended'
    ],
    parser: 'babel-eslint',
    parserOptions: {
        ecmaFeatures: {
            jsx: true
        }
    },
    plugins: [
        'jsx-a11y'
    ],
    settings: {
        react: {
            version: '16.2'
        }
    }
};"
`;

exports[`"Create/New" commands create package.json 1`] = `
"{
    \\"name\\": \\"my-project\\",
    \\"version\\": \\"0.0.0\\",
    \\"description\\": \\"A super cool app/server/tool/library/widget/thingy\\",
    \\"license\\": \\"MIT\\",
    \\"keywords\\": []
}
"
`;

exports[`"Create/New" commands create source directory 1`] = `
"{
    name: tomo-test,
    children: [
        {
            name: some-random-folder-name,
            children: [],
            size: 0,
            type: directory
        }
    ],
    size: 0,
    type: directory
}
"
`;
